@@ -1,6 +1,6 @@
 PKGNAME=pykickstart
 VERSION=$(shell awk '/Version:/ { print $$2 }' ${PKGNAME}.spec)
-RELEASE=$(shell awk '/Release:/ { print $$2 }' ${PKGNAME}.spec)
+RELEASE=$(shell awk '/Release:/ { print $$2 }' ${PKGNAME}.spec | sed -e 's|%.*$$||g')
 CVSTAG=r$(subst .,_,$(VERSION)-$(RELEASE))
 
 MANDIR=/usr/share/man
